-Fix bug and remove image resize dll.

--- a/TeliconLatest/Views/Auth/ForgetPassword.cshtml
+++ b/TeliconLatest/Views/Auth/ForgetPassword.cshtml
@@ -12,7 +12,7 @@
         @if (ViewBag.Success == true)
         {
             <div class="clearfix">
-                <h1 style="float:left;width:250px;">Request sent Successfully. You will recieve an Email shortly.</h1>
+                <h1 style="float:left;width:250px;">Password reset successfully. New password is <b>Password123.</b></h1>
                 <span style="float:right;margin-top:15px;" class="ok-holder"><i class="fe-ok"></i></span>
             </div>
             <div class="clearfix buttons">
