--- a/TeliconLatest/Views/Home/Index.cshtml
+++ b/TeliconLatest/Views/Home/Index.cshtml
@@ -87,7 +87,7 @@
                 palette: "Soft Pastel",
                 equalBarWidth: false,
                 commonSeriesSettings: {
-                    argumentField: "Period",
+                    argumentField: "PeriodName",
                     type: "bar",
                     hoverMode: "allArgumentPoints",
                     selectionMode: "allArgumentPoints"
