--- a/TeliconLatest/Views/PO/Index.cshtml
+++ b/TeliconLatest/Views/PO/Index.cshtml
@@ -20,7 +20,7 @@
                     { "targets": 1, "name": "Description", "data": "Description", "class": "dt-item-title" },
                     { "targets": 2, "name": "TOTAL", "data": "Total", "class": "dt-item-title", "searchable": false },
                     { "targets": 3, "name": "BALANCE", "data": "Balance", "class": "dt-item-title", "searchable": false },
-                    { "targets": 4, "name": "IsClosed", "data": "IsClosed", "class": "dt-check" },
+                    { "targets": 4, "name": "IsClosed", "data": "IsClosed", "class": "dt-check", "searchable": false },
                     {
                         "targets": 5, "class": "actions",
                         "orderable": false, "searchable": false, "data": null,
