- Add sp changes and fix other issues.

--- a/TeliconLatest/Views/Client/Index.cshtml
+++ b/TeliconLatest/Views/Client/Index.cshtml
@@ -21,7 +21,7 @@
                     { "targets": 1, "name": "CustName", "data": "Name" },
                     { "targets": 2, "name": "Phone1", "data": "Phone", },
                     { "targets": 3, "name": "Email", "data": "Email" },
-                    { "targets": 4, "name": "CustClass", "data": "Type", "class": "dt-flag" },
+                    { "targets": 4, "name": "CustClass", "data": "Type", "class": "dt-flag", "searchable":false },
                     { "targets": 5, "name": "Currency", "data": "Currency" },
                     {
                         "targets": 6, "class": "actions",
